--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section class="logo">Logo</section>
 
         <section class="flex flex-wrap">
+          <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
           <section class="px-4"><i class="fi fi-rs-heart"></i></section>
           <section class="px-4">
             <i class="fi fi-rs-menu-burger"></i>
@@ -121,5 +122,5 @@
       </section>
     </footer>
   </body>
-  <script src="js/app.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 </html>
