--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
   <link rel="stylesheet" href="css/regular-straight.css" />
 </head>
 
-        <section class="flex flex-wrap">
-          <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
-          <section class="px-4"><i class="fi fi-rs-heart"></i></section>
-          <section class="px-4">
-            <i class="fi fi-rs-menu-burger"></i>
-          </section>
+<body>
+  <header class="flex flex-wrap">
+    <section class="flex flex-wrap justify-between full-width items-center">
+      <section class="logo">Logo</section>
+
+      <section class="flex flex-wrap">
+        <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
+        <section class="px-4"><i class="fi fi-rs-heart"></i></section>
+        <section class="px-4">
+          <i class="fi fi-rs-menu-burger"></i>
         </section>
       </section>
     </section>
   </header>
-
   <main id="app" role="main">
 
 
@@ -121,6 +124,6 @@
     </section>
   </footer>
 </body>
-<script src="js/app.js"></script>
+<!-- <script src="js/app.js"></script> -->
 
 </html>
