--- a/resultados.html
+++ b/resultados.html
@@ -33,11 +33,222 @@
       </section>
     </section>
     <section id="results" class="flex">
-      <div class="results__column">
-        resultados
+      <div class="results__column in-md-4">
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="py-4">
+          <div>
+            <div class="flex">
+              <div class="in-md-7">
+                <div>
+                  <picture>
+                    <img src="assets/img/imagen-1.jpeg" alt="">
+                  </picture>
+                </div>
+              </div>
+              <div class="in-md-5 px-1 flex">
+                <div class="results__item flex flex-wrap">
+                  <div class="flex flex-wrap justify-between full-width">
+                    <div>
+                      <p> Titulo </p>
+                    </div>
+                    <div> <i class="fi fi-rs-heart"></i></div>
+                  </div>
+                  <div class="flex-grow">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                  </div>
+                  <div class="flex justify-between full">
+                    <button>telefono</button>
+                    <button> contacto</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div>
-        mapa
+      <div id="mapa" class="in-md-8 flex justify-center items-center">
+        <div class="map__content">
+          mapa
+        </div>
       </div>
     </section>
 
