--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <header class="flex flex-wrap">
     <section class="flex flex-wrap justify-between full-width items-center">
-      <section class="logo">Logo</section>
+      <section class="logo">
+        <a href="index.html"> Logo</a>
+      </section>
 
       <section class="flex flex-wrap">
         <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
@@ -25,8 +27,6 @@
     </section>
   </header>
   <main id="app" role="main">
-
-
     <section class="hero">hero banner</section>
     <section class="container mx-auto center">
       <article id="listOf" class="content content--overlap px-6 py-6">
@@ -34,7 +34,7 @@
         <h2 class="px-4">Encuentra el lugar ideal para ti</h2>
         <div class="list__places flex flex-wrap py-6">
           <div class="list__places--item">
-            <a href="#">
+            <a href="resultados.html">
               <div class="px-4">
                 <div class="list__places--item--picture"></div>
                 <div class="list__places--item--text">
@@ -49,7 +49,7 @@
             </a>
           </div>
           <div class="list__places--item">
-            <a href="#">
+            <a href="resultados.html">
               <div class="px-4">
                 <div class="list__places--item--picture"></div>
                 <div class="list__places--item--text">
@@ -111,17 +111,68 @@
         </div>
       </article>
     </section>
+    <section class="container mx-auto center">
+      <ul class="flex justify-between py-8 ">
+        <li>
+          <div>
+            <span>
+              <i class=" fi-rs-building"></i>
+            </span>
+            <div>
+              <h3>Tranquilidad</h3>
+              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <span>
+              <i class="fi-rs-marker"></i>
+            </span>
+            <div>
+              <h3>Tranquilidad</h3>
+              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <span>
+              <i class=" fi-rs-key"></i>
+            </span>
+            <div>
+              <h3>Tranquilidad</h3>
+              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <span>
+              <i class="fi-rs-money"></i>
+            </span>
+            <div>
+              <h3>Tranquilidad</h3>
+              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
 
-  <footer>
-    <section class="flex flex-wrap">menu footer</section>
-    <section class="flex flex-wrap justify-between">
-      <p>
-        &copy; 2021 Alquileo - <a href="#">Privacidad</a>
-        <a href="#"> Términos</a> <a href="#">Mapa del sitio</a>
-      </p>
-      <p>Hecho con amor por Jo Repossi</p>
-    </section>
+  <footer id="footer" class="my-8 py-8 full-width">
+    <div class="container mx-auto">
+
+      <section class="flex flex-wrap">menu footer</section>
+      <section class="flex flex-wrap justify-between">
+        <p>
+          &copy; 2021 Alquileo - <a href="#">Privacidad</a>
+          <a href="#"> Términos</a> <a href="#">Mapa del sitio</a>
+        </p>
+        <p>Hecho con <i class="fi fi-rs-heart"></i> por Jo Repossi</p>
+      </section>
+    </div>
   </footer>
 </body>
 <!-- <script src="js/app.js"></script> -->
