--- a/resultados.html
+++ b/resultados.html
@@ -13,7 +13,9 @@
 <body>
   <header class="flex flex-wrap">
     <section class="flex flex-wrap justify-between full-width items-center">
-      <section class="logo">Logo</section>
+      <section class="logo">
+        <a href="index.html"> Logo</a>
+      </section>
 
       <section class="flex flex-wrap">
         <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
@@ -337,17 +339,28 @@
     </section> -->
   </main>
 
-  <footer>
-    <section class="flex flex-wrap">menu footer</section>
-    <section class="flex flex-wrap justify-between">
-      <p>
-        &copy; 2021 Alquileo - <a href="#">Privacidad</a>
-        <a href="#"> Términos</a> <a href="#">Mapa del sitio</a>
-      </p>
-      <p>Hecho con amor por Jo Repossi</p>
-    </section>
+  <footer id="footer" class="my-8 py-8 full-width">
+    <div class="container mx-auto">
+
+      <section class="flex flex-wrap">menu footer</section>
+      <section class="flex flex-wrap justify-between">
+        <p>
+          &copy; 2021 Alquileo - <a href="#">Privacidad</a>
+          <a href="#"> Términos</a> <a href="#">Mapa del sitio</a>
+        </p>
+        <p>Hecho con <i class="fi fi-rs-heart"></i> por Jo Repossi</p>
+      </section>
+    </div>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&callback=initMap"></script>
+  <script src="js/points.js"></script>
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&callback=initMap"
+    async defer>
+    </script>
+  <!-- <script src="js/app.js"></script> -->
 </body>
-<!-- <script src="js/app.js"></script> -->
 
 </html>
