--- a/resultados.html
+++ b/resultados.html
@@ -27,7 +27,7 @@
     </section>
   </header>
 
-  <main id="app" role="main">
+  <main id="app" role="main" class="flex direction-column">
     <section id="filters">
       <section class="flex">
         <p> filtros</p>
@@ -36,210 +36,212 @@
     </section>
     <section id="results" class="flex">
       <div class="results__column in-md-4">
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+        <div class="results__column--wrapper">
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="py-4">
-          <div>
-            <div class="flex">
-              <div class="in-md-7">
-                <div>
-                  <picture>
-                    <img src="assets/img/imagen-1.jpeg" alt="">
-                  </picture>
+          <div class="py-4 results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
                 </div>
-              </div>
-              <div class="in-md-5 px-1 flex">
-                <div class="results__item flex flex-wrap">
-                  <div class="flex flex-wrap justify-between full-width">
-                    <div>
-                      <p> Titulo </p>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
                     </div>
-                    <div> <i class="fi fi-rs-heart"></i></div>
-                  </div>
-                  <div class="flex-grow">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                  </div>
-                  <div class="flex justify-between full">
-                    <button>telefono</button>
-                    <button> contacto</button>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
                   </div>
                 </div>
               </div>
