--- a/resultados.html
+++ b/resultados.html
@@ -35,9 +35,9 @@
       </section>
     </section>
     <section id="results" class="flex">
-      <div class="results__column in-md-4">
+      <div class="results__column">
         <div class="results__column--wrapper">
-          <div class="py-4 results__column--item">
+          <div class="results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -67,7 +67,7 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -127,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -157,7 +157,7 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -187,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -217,7 +217,67 @@
               </div>
             </div>
           </div>
-          <div class="py-4 results__column--item">
+          <div class=" results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
+                </div>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
+                    </div>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class=" results__column--item">
+            <div>
+              <div class="flex">
+                <div class="in-md-7">
+                  <div>
+                    <picture>
+                      <img src="assets/img/imagen-1.jpeg" alt="">
+                    </picture>
+                  </div>
+                </div>
+                <div class="in-md-5 px-1 flex">
+                  <div class="results__item flex flex-wrap">
+                    <div class="flex flex-wrap justify-between full-width">
+                      <div>
+                        <p> Titulo </p>
+                      </div>
+                      <div> <i class="fi fi-rs-heart"></i></div>
+                    </div>
+                    <div class="flex-grow">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    </div>
+                    <div class="flex justify-between full">
+                      <button>telefono</button>
+                      <button> contacto</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class=" results__column--item">
             <div>
               <div class="flex">
                 <div class="in-md-7">
@@ -256,89 +316,7 @@
       </div>
     </section>
 
-    <!-- <section class="container mx-auto center">
-      <article id="listOf" class="content content--overlap px-6 py-6">
-        <div id="outputText"></div>
-        <h2 class="px-4">Encuentra el lugar ideal para ti</h2>
-        <div class="list__places flex flex-wrap py-6">
-          <div class="list__places--item">
-            <a href="#">
-              <div class="px-4">
-                <div class="list__places--item--picture"></div>
-                <div class="list__places--item--text">
-                  <div>
-                    <h3>Barrio</h3>
-                  </div>
-                  <div>
-                    <p>Ver 100 propiedades</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="list__places--item">
-            <a href="#">
-              <div class="px-4">
-                <div class="list__places--item--picture"></div>
-                <div class="list__places--item--text">
-                  <div>
-                    <h3>Barrio</h3>
-                  </div>
-                  <div>
-                    <p>Ver 100 propiedades</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="list__places--item">
-            <a href="#">
-              <div class="px-4">
-                <div class="list__places--item--picture"></div>
-                <div class="list__places--item--text">
-                  <div>
-                    <h3>Barrio</h3>
-                  </div>
-                  <div>
-                    <p>Ver 100 propiedades</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="list__places--item">
-            <a href="#">
-              <div class="px-4">
-                <div class="list__places--item--picture"></div>
-                <div class="list__places--item--text">
-                  <div>
-                    <h3>Barrio</h3>
-                  </div>
-                  <div>
-                    <p>Ver 100 propiedades</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="list__places--item">
-            <a href="#">
-              <div class="px-4">
-                <div class="list__places--item--picture"></div>
-                <div class="list__places--item--text">
-                  <div>
-                    <h3>Barrio</h3>
-                  </div>
-                  <div>
-                    <p>Ver 100 propiedades</p>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </article>
-    </section> -->
+
   </main>
 
   <footer id="footer" class="my-8 py-8 full-width">
