--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
 
       <section class="flex flex-wrap">
-        <section class="px-4"><i class="fi fi-rs-user"></i> Login </section>
+        <section class="px-4"><i class="fi fi-rs-user"></i> Login</section>
         <section class="px-4"><i class="fi fi-rs-heart"></i></section>
         <section class="px-4">
           <i class="fi fi-rs-menu-burger"></i>
@@ -27,7 +27,9 @@
     </section>
   </header>
   <main id="app" role="main">
-    <section class="hero">hero banner</section>
+    <section class="hero" style="background-image: url(assets/img/hero-banner-0.jpg"></section>
+
+    </section>
     <section class="container mx-auto center">
       <article id="listOf" class="content content--overlap px-6 py-6">
         <div id="outputText"></div>
@@ -113,15 +115,18 @@
       </article>
     </section>
     <section class="container mx-auto center">
-      <ul class="flex justify-between py-8 ">
+      <ul class="flex justify-between py-8">
         <li>
           <div>
             <span>
-              <i class=" fi-rs-building"></i>
+              <i class="fi-rs-building"></i>
             </span>
             <div>
               <h3>Tranquilidad</h3>
-              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+              <span>
+                Aprovecha nuestra Garantía Reserva con Confianza, que te
+                brinda atención 24/7.
+              </span>
             </div>
           </div>
         </li>
@@ -132,18 +137,24 @@
             </span>
             <div>
               <h3>Tranquilidad</h3>
-              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+              <span>
+                Aprovecha nuestra Garantía Reserva con Confianza, que te
+                brinda atención 24/7.
+              </span>
             </div>
           </div>
         </li>
         <li>
           <div>
             <span>
-              <i class=" fi-rs-key"></i>
+              <i class="fi-rs-key"></i>
             </span>
             <div>
               <h3>Tranquilidad</h3>
-              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+              <span>
+                Aprovecha nuestra Garantía Reserva con Confianza, que te
+                brinda atención 24/7.
+              </span>
             </div>
           </div>
         </li>
@@ -154,7 +165,10 @@
             </span>
             <div>
               <h3>Tranquilidad</h3>
-              <span> Aprovecha nuestra Garantía Reserva con Confianza, que te brinda atención 24/7. </span>
+              <span>
+                Aprovecha nuestra Garantía Reserva con Confianza, que te
+                brinda atención 24/7.
+              </span>
             </div>
           </div>
         </li>
@@ -164,7 +178,6 @@
 
   <footer id="footer" class="my-8 py-8 full-width">
     <div class="container mx-auto">
-
       <section class="flex flex-wrap">menu footer</section>
       <section class="flex flex-wrap justify-between">
         <p>
@@ -176,6 +189,6 @@
     </div>
   </footer>
 </body>
-<script src="js/app.js"></script>
+
 
 </html>
